--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
 
   <div class="form-box">
     <select id="district">
+      <select id="category">
+  <option value="all">All Categories</option>
+  <option value="nature">Nature</option>
+  <option value="heritage">Heritage</option>
+  <option value="religious">Religious</option>
+  <option value="wildlife">Wildlife</option>
+</select>
+
       <option value="">Select District</option>
     </select>
 
